fdo#58060 - use empty-string for LANGUAGE_DONTKNOW ie. acorr_.dat

Change-Id: I399dcc41484c8b86f13c80bc1e92af919c9aeaff